# DevilutionX

./: .gitignore  CMakeLists.txt  README.md  build_release.ps1
.github/workflows/: 3ds.yml  Android.yml  Linux_aarch64.yml  Linux_x86.yml  Linux_x86_64.yml  Linux_x86_64_SDL1.yml  Linux_x86_64_SDL3_test.yml  Linux_x86_64_test.yml  PS4.yml  PS5.yml  Windows9x_MinGW.yml  Windows_MSVC_x64.yml  Windows_MinGW_x64.yml  Windows_MinGW_x86.yml  Windows_XP_32bit.yml  amiga-m68k.yml  iOS.yml  macOS_arm64.yml  macOS_x86_64.yml  miyoo_mini_release.yml  opendingux_release.yml  retrofw_release.yml  s390x_qemu_big_endian_tests.yml  src_dist_release.yml  switch.yml  vita.yml  xbox_nxdk.yml  xbox_one.yml
CMake/: Assets.cmake  Mods.cmake  Tests.cmake
Source/: CMakeLists.txt  automap.cpp  control.cpp  control.h  cursor.cpp  cursor.h  dead.cpp  diablo.cpp  diablo.h  doom.cpp  effects_stubs.cpp  gamemenu.cpp  gmenu.cpp  init.cpp  interfac.cpp  interfac.h  inv.cpp  itemdat.cpp  itemdat.h  items.cpp  items.h  lighting.cpp  lighting.h  loadsave.cpp  minitext.cpp  minitext.h  missiles.cpp  missiles.h  monster.cpp  monster.h  msg.cpp  msg.h  multi.cpp  multi.h  nthread.cpp  objects.cpp  objects.h  options.cpp  options.h  pack.cpp  (+15 more)
Source/DiabloUI/: diabloui.cpp  diabloui.h  selstart.h
Source/DiabloUI/hero/: selhero.cpp
Source/DiabloUI/multi/: selgame.cpp
Source/control/: control.hpp  control_chat.cpp  control_chat.hpp  control_chat_commands.cpp  control_chat_commands.hpp  control_flasks.cpp  control_flasks.hpp  control_gold.cpp  control_infobox.cpp  control_panel.cpp  control_panel.hpp
Source/controls/: controller.cpp  controller_motion.cpp  game_controls.cpp  keymapper.cpp  local_coop.cpp  local_coop.hpp  local_coop_constants.hpp  modifier_hints.cpp  modifier_hints.h  plrctrls.cpp  plrctrls.h
Source/controls/devices/: game_controller.h  joystick.cpp  joystick.h
Source/controls/local_coop/: local_coop.cpp  local_coop.hpp  local_coop_assets.cpp  local_coop_assets.hpp  local_coop_button_mapper.cpp  local_coop_button_mapper.hpp  local_coop_constants.hpp  local_coop_helpers.hpp  local_coop_player_context.cpp  local_coop_player_context.hpp
Source/controls/touch/: event_handlers.cpp  gamepad.cpp  renderers.cpp
Source/data/: file.cpp
Source/discord/: discord.cpp
Source/dvlnet/: base.cpp  loopback.cpp  loopback.h  packet.h  protocol_zt.cpp
Source/engine/: demomode.cpp  lighting_defs.hpp  palette.cpp  random.hpp  sound.cpp  sound_pool.cpp  sound_pool.hpp  sound_pool_stubs.cpp
Source/engine/render/: light_render.cpp  scrollrt.cpp  text_render.cpp  text_render.hpp
Source/items/: validation.cpp
Source/levels/: drlg_l3.cpp  drlg_l4.cpp  gendung.cpp  gendung.h  gendung_defs.hpp  reencode_dun_cels.cpp  setmaps.cpp  setmaps.h  themes.h  town.cpp  town_data.cpp  town_data.h  trigs.cpp  trigs.h
Source/lua/: lua_event.cpp  lua_event.hpp  lua_global.cpp  lua_global.hpp
Source/lua/modules/: audio.cpp  floatingnumbers.cpp  floatingnumbers.hpp  game.cpp  game.hpp  items.cpp  items.hpp  monsters.cpp  monsters.hpp  player.cpp  render.cpp  system.cpp  system.hpp  towns.cpp  towns.hpp
Source/lua/modules/dev/: monsters.cpp
Source/lua/modules/dev/player/: spells.cpp
Source/panels/: charpanel.cpp  charpanel.hpp  console.cpp  mainpanel.cpp  mainpanel.hpp  partypanel.cpp  spell_book.cpp  spell_book.hpp  spell_icons.hpp  spell_list.cpp  spell_list.hpp
Source/platform/ctr/: display.cpp  display.hpp  keyboard.cpp  random.cpp  random.hpp  sockets.hpp
Source/platform/ctr/asio/include/: errno.h  netdb.h
Source/platform/ctr/asio/include/netinet/: in.h
Source/platform/ctr/asio/include/sys/: ioctl.h  socket.h  uio.h  un.h
Source/platform/ios/: ios_paths.h
Source/platform/switch/: random.hpp
Source/platform/switch/asio/include/net/: if.h
Source/platform/switch/asio/include/netinet/: in.h
Source/platform/switch/asio/include/sys/: uio.h  un.h
Source/portals/: validation.cpp
Source/qol/: autopickup.cpp  chatlog.cpp  floatingnumbers.cpp  floatingnumbers.h  itemlabels.cpp  monhealthbar.cpp  stash.cpp  stash.h  visual_store.cpp  xpbar.cpp
Source/quests/: validation.cpp  validation.hpp
Source/tables/: itemdat.cpp  itemdat.h  misdat.cpp  misdat.h  monstdat.cpp  monstdat.h  objdat.cpp  playerdat.cpp  playerdat.hpp  spelldat.cpp  spelldat.h  textdat.cpp  textdat.h  townerdat.cpp  townerdat.hpp
Source/utils/: display.cpp  hp_mana_units.hpp  language.cpp  proximity_audio.cpp  proximity_audio.hpp  screen_reader.cpp  screen_reader.hpp  sdl_thread.cpp  soundsample.cpp  soundsample.h
Translations/: be.po  fi.po  ja.po  pl.po
android-project/app/src/main/java/org/diasurgical/devilutionx/: DevilutionXSDLActivity.java
android-project/app/src/main/res/values-be/: strings.xml
assets/data/: monstertags.clx
assets/fonts/: 12-05.clx  24-05.clx  30-05.clx  42-05.clx  46-05.clx
assets/lua/: repl_prelude.lua
assets/lua/devilutionx/: events.lua
assets/lua/mods/Floating Numbers - Damage/: init.lua
assets/lua/mods/Floating Numbers - XP/: init.lua
assets/lua/mods/adria_refills_mana/: init.lua
assets/lua/mods/clock/: init.lua
assets/lua/mods/soulstone/: init.lua
assets/txtdata/items/: itemdat.tsv  unique_itemdat.tsv
docs/: CHANGELOG.md  CONTRIBUTING.md
mods/WirtInTown/txtdata/towners/: towners.tsv
mods/arena/: COMMIT_MESSAGE.md  CONVERSION_SUMMARY.md  LUA_API_TODO.md  QUICK_START.md  README.md  init.lua  mod.json
test/: custom_items_test.cpp  multi_logging_test.cpp  pack_test.cpp  player_test.cpp  player_test.h  quests_test.cpp  random_test.cpp  scrollrt_test.cpp  text_render_integration_test.cpp  tile_properties_test.cpp  timedemo_test.cpp  town_registry_test.cpp  townerdat_test.cpp  vendor_test.cpp  writehero_test.cpp
tools/: make_src_dist.py  msgfmt.py
